unpackaged/main/default/objects/CMPL123__MDC_Ticket__c/CMPL123__MDC_Ticket__c.object-meta.xml
<CustomObject>
    <label>MDC Ticket</label>
    <nameField>
        <displayFormat>MDC-{00000}</displayFormat>
        <label>MDC Ticket No</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>MDC Tickets</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>