unpackaged/main/default/objects/CMPL123__MDC_Ticket__c/fields/CMPL123__All_Acks_Received__c.field-meta.xml
<CustomField>
        <fullName>CMPL123__All_Acks_Received__c</fullName>
        <defaultValue>false</defaultValue>
        <label>All Acks Received</label>
        <type>Checkbox</type>
    </CustomField>