unpackaged/main/default/objects/CMPL123__MDC_Ticket__c/fields/CMPL123__Description__c.field-meta.xml
<CustomField>
        <fullName>CMPL123__Description__c</fullName>
        <label>Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </CustomField>