unpackaged/main/default/objects/CMPL123__MDC_Ticket__c/fields/CMPL123__Field_Condition__c.field-meta.xml
<CustomField>
        <fullName>CMPL123__Field_Condition__c</fullName>
        <label>Field_Condition</label>
        <length>255</length>
        <type>Text</type>
    </CustomField>