unpackaged/main/default/objects/CMPL123__MDC_Ticket__c/fields/CMPL123__MDC_Trigger__c.field-meta.xml
<CustomField>
        <fullName>CMPL123__MDC_Trigger__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>MDC Trigger</label>
        <referenceTo>CMPL123__MDC_Trigger__c</referenceTo>
        <relationshipLabel>MDC Tickets</relationshipLabel>
        <relationshipName>MDC_Tickets</relationshipName>
        <type>Lookup</type>
    </CustomField>