unpackaged/main/default/objects/CMPL123__MDC_Ticket__c/fields/CMPL123__MDC_Trigger_Name__c.field-meta.xml
<CustomField>
        <fullName>CMPL123__MDC_Trigger_Name__c</fullName>
        <formula>CMPL123__MDC_Trigger__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>MDC Trigger Name</label>
        <type>Text</type>
    </CustomField>