unpackaged/main/default/objects/CMPL123__MDC_Ticket__c/fields/CMPL123__Record_Type__c.field-meta.xml
<CustomField>
        <fullName>CMPL123__Record_Type__c</fullName>
        <label>Record Type</label>
        <length>255</length>
        <type>Text</type>
    </CustomField>