unpackaged/main/default/objects/CMPL123__MDC_Ticket__c/fields/CMPL123__Related_Record__c.field-meta.xml
<CustomField>
        <fullName>CMPL123__Related_Record__c</fullName>
        <formula>HYPERLINK('/' &amp; CMPL123__Related_Record_ID__c ,  CMPL123__Related_Record_Name__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Related Record</label>
        <type>Text</type>
    </CustomField>