unpackaged/main/default/objects/CMPL123__MDC_Ticket__c/fields/CMPL123__Related_Record_Detail__c.field-meta.xml
<CustomField>
        <fullName>CMPL123__Related_Record_Detail__c</fullName>
        <label>Record Detail</label>
        <length>255</length>
        <type>Text</type>
    </CustomField>