unpackaged/main/default/objects/CMPL123__MDC_Ticket__c/fields/CMPL123__Related_Record_ID__c.field-meta.xml
<CustomField>
        <fullName>CMPL123__Related_Record_ID__c</fullName>
        <label>Related Record ID</label>
        <length>255</length>
        <type>Text</type>
    </CustomField>