unpackaged/main/default/objects/CMPL123__MDC_Ticket__c/fields/CMPL123__Related_Record_Name__c.field-meta.xml
<CustomField>
        <fullName>CMPL123__Related_Record_Name__c</fullName>
        <label>Related Record Name</label>
        <length>255</length>
        <type>Text</type>
    </CustomField>