unpackaged/main/default/objects/CMPL123__MDC_Ticket__c/fields/CMPL123__Rule_Description__c.field-meta.xml
<CustomField>
        <fullName>CMPL123__Rule_Description__c</fullName>
        <label>Rule Description</label>
        <length>255</length>
        <type>Text</type>
    </CustomField>