unpackaged/main/default/objects/CMPL123__MDC_Ticket__c/listViews/CMPL123__All.listView-meta.xml
<ListView>
        <fullName>CMPL123__All</fullName>
        <columns>NAME</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CMPL123__Field_Name__c</columns>
        <columns>CMPL123__Audit_Trail_Entry__c</columns>
        <columns>CMPL123__MDC_Trigger__c</columns>
        <columns>CMPL123__Record_Type__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </ListView>