unpackaged/main/default/objects/CMPL123__MDC_Ticket__c/listViews/CMPL123__All1.listView-meta.xml
<ListView>
        <fullName>CMPL123__All1</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </ListView>